--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "web-vitals": "^2.1.4"
   },
