--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,1 +1,1 @@
-{ "compilerOptions": { "baseUrl": "src" }, "include": ["src"] }
+{ "compilerOptions": { "baseUrl": "src", "target" : "ES6" }, "include": ["src"] }
